syntax = "proto3";

package com.btdxcx.shop.srv.taxons;

service Taxons {
	rpc Root (TaxonsShopIDRequest) returns (TaxonsMessage) {}
	rpc Create (TasonsCreateRequest) returns (TasonsCodeResponse);
	rpc CreateChildren (TaxonsRequest) returns (TasonsCodeResponse);
	rpc Update (TaxonsRequest) returns (TasonsCodeResponse);
	rpc Delete (TasonsDeleteRequest) returns (TasonsCodeResponse);

	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message TaxonsShopIDRequest {
	string shopID = 1;
}

message TasonsDeleteRequest {
	string shopID = 1;
	string code = 2;
}

message TasonsCodeResponse {
	string code = 1;
}

message TasonsCreateRequest {
	string shopID = 1;
    string name = 2;
    string description = 3;

    repeated Image images = 4;
}

message TaxonsRequest {
	string shopID = 1;
	string code = 2;
    string name = 3;
    string description = 4;

    repeated Image images = 5;
}

message TaxonsResponse {
	TaxonsMessage message = 1;
}

message Image {
	string id = 1;
	string code = 2;
	string path = 3;
}

message TaxonsMessage {
	string shopID = 1;
	string code = 2;
    string name = 3;
    string description = 4;

    repeated Image images = 5;

    repeated TaxonsMessage children = 6;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
